fix: Increase selected tab's z-index to render in front of box-shadow

--- a/frontend/styles/pages/tab-bar.css
+++ b/frontend/styles/pages/tab-bar.css
@@ -47,6 +47,7 @@
 .tab-button.selected {
     color: var(--font-color-tertiary);
     background-color: var(--background-secondary); 
+    z-index: 1;
 }
 
 .close-tab-button {
